# 3D_Engine

./: .gitignore  .gitmodules  Application diagram.drawio  CMakeLists.txt  README.md  imgui.ini
3D_Engine_Core/: CmakeLists.txt
3D_Engine_Core/include/engine/: Engine.hpp  application.hpp  application_settings.hpp  basic_window.hpp  error.hpp  glfw_window.hpp  image.hpp  names_settings.hpp  resource_manager.hpp
3D_Engine_Core/include/engine/ecs/: ecs.hpp  ecs_system.hpp  fwd.hpp
3D_Engine_Core/include/engine/error/: application_error.hpp  fwd.hpp  window_error.hpp
3D_Engine_Core/include/engine/fwd/: Engine.hpp  application.hpp  resource_manager.hpp
3D_Engine_Core/include/engine/input/: keyboard.hpp  keys.hpp  mouse.hpp
3D_Engine_Core/include/engine/interfaces/: binded_object.hpp  dumped_object.hpp  fwd.hpp  serialized_view.hpp  usage_object.hpp
3D_Engine_Core/include/engine/logging/: log.hpp
3D_Engine_Core/include/engine/models/: cube.hpp
3D_Engine_Core/include/engine/modules/: application_UIModule.hpp  basic_UIModule.hpp
3D_Engine_Core/include/engine/render/: application_renderer.hpp  basic_material.hpp  basic_mesh.hpp  basic_renderer.hpp  basic_shader_program.hpp  basic_texture2D.hpp  camera.hpp  common_types.hpp  frustum.hpp  fwd.hpp  image.hpp  material.hpp  model.hpp  models_manager.hpp  phrustum.hpp  shader_constructor.hpp  shaders_manager.hpp  texture_parametrs.hpp
3D_Engine_Core/include/engine/scene/: Scene.hpp  common_types.hpp  fwd.hpp  renderable_scene_object.hpp  scene_object.hpp  world_data.hpp
3D_Engine_Core/include/engine/util/: file_reader.hpp  file_searcher.hpp  fwd.hpp  json_view.hpp  nocopyeble.hpp  nomoveble.hpp  test.hpp
3D_Engine_Core/include/engine/window/: basic_window.hpp  basic_window_context.hpp  common_types.hpp  event_structs.hpp  events_data.hpp  fwd.hpp  glfw_window.hpp  window.hpp  window_fwd.hpp  window_gui.hpp  windows_collector.hpp  windows_manager.hpp
3D_Engine_Core/res/config/: config.json
3D_Engine_Core/res/objects/Steve/: DO NOT POST IN THE INTERNET AND CLAIM ITS YOURS.txt  Remember To Like This Model And Comment Down Below.txt
3D_Engine_Core/res/objects/Tree/: tree.mb
3D_Engine_Core/res/scenes/: Scene1.scn
3D_Engine_Core/res/shaders/: DeerFS.fs  DeerVS.vs  DefaultFS.fs  DefaultVS.vs  DirectionLight.glsl  PointLight.glsl  UnlitFS.fs  VertexShader.glsl
3D_Engine_Core/src/engine/: Engine.cpp  application.cpp  application_settings.cpp  basic_window.cpp  glfw_window.cpp  image.cpp  names_settings.cpp  resource_manager.cpp
3D_Engine_Core/src/engine/ecs/: ecs_system.cpp  systems_constructor.cpp
3D_Engine_Core/src/engine/input/: keyboard.cpp  mouse.cpp
3D_Engine_Core/src/engine/materials/: basic_material.cpp
3D_Engine_Core/src/engine/meshes/: basic_mesh.cpp
3D_Engine_Core/src/engine/modules/: application_UIModule.cpp  basic_UIModule.cpp
3D_Engine_Core/src/engine/render/: application_renderer.cpp  basic_mesh.cpp  basic_renderer.cpp  basic_shader_program.cpp  basic_texture2D.cpp  camera.cpp  image.cpp  material.cpp  model.cpp  models_manager.cpp  shaders_manager.cpp
3D_Engine_Core/src/engine/scene/: Scene.cpp  renderable_scene_object.cpp  scene_object.cpp
3D_Engine_Core/src/engine/util/: file_reader.cpp  image.cpp  json_view.cpp  test.cpp
3D_Engine_Core/src/engine/window/: basic_window.cpp  basic_window_context.cpp  glfw_window.cpp  window_gui.cpp  windows_collector.cpp  windows_manager.cpp
3D_Engine_Editor/: CmakeLists.txt
3D_Engine_Editor/include/: editor_app.hpp
3D_Engine_Editor/src/: editor_app.cpp  main.cpp
Authorization_Service/: CMakeLists.txt
Authorization_Service/auth_lib/: CMakeLists.txt
Authorization_Service/auth_lib/include/auth/: fwd.hpp  user.hpp
Authorization_Service/auth_lib/include/auth/fwd/: user.hpp
Authorization_Service/auth_lib/src/auth/: user.cpp
Authorization_Service/client/: CMakeLists.txt
Authorization_Service/client/include/auth/: authorization_client.hpp
Authorization_Service/client/src/auth/: authorization_client.cpp
Authorization_Service/include/engine/authorization/: client.hpp  server.hpp
Authorization_Service/server/: CMakeLists.txt
Authorization_Service/server/include/auth/: authorization_server.hpp  fwd.hpp
Authorization_Service/server/include/auth/db/: auth_db_settings.hpp
Authorization_Service/server/include/auth/db/tables/: users_table.hpp
Authorization_Service/server/include/auth/fwd/: authorization_server.hpp
Authorization_Service/server/schemas/: users.db.sql
Authorization_Service/server/src/: main.cpp
Authorization_Service/server/src/auth/: authorization_server.cpp
Authorization_Service/server/src/auth/db/: auth_db_settings.cpp
Authorization_Service/server/src/auth/db/tables/: users_table.cpp
Authorization_Service/src/: main.cpp
Authorization_Service/src/engine/authorization/: client.cpp  server.cpp
core/: CmakeLists.txt
core/application/: CmakeLists.txt
core/application/include/engine/: Engine.hpp  application_executor.hpp  application_settings.hpp  resource_manager.hpp
core/application/src/engine/: Engine.cpp  (+3 more)
core/ecs/: CmakeLists.txt
core/error/: CMakeLists.txt
core/error/include/engine/error/: error.hpp
core/error/include/engine/error/fwd/: error.hpp  window_error.hpp
core/error/src/engine/error/: error.cpp
core/include/engine/: application.hpp  names_settings.hpp  resource_manager.hpp
core/log/: CMakeLists.txt
core/log/include/engine/logging/: log.hpp
core/net/: CmakeLists.txt
core/render/: CmakeLists.txt
core/res/scenes/: Scene1.scn
core/res/shaders/: DefaultVS.vs  FragmentShader.glsl
core/scene/: CmakeLists.txt
core/src/engine/: application_settings.cpp
core/utility/: CmakeLists.txt
core/window/: CmakeLists.txt
editor/: CmakeLists.txt
editor/src/: editor_app.cpp  main.cpp
editor/src/editor/: Editor.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
tests/src/net/: ut_basic_http_message.cpp  ut_http_parsing.cpp  ut_request.cpp  ut_response.cpp  ut_url.cpp
tests/src/net/db/: ut_connection_data.cpp
tests/src/net/http/: ut_host.cpp  ut_request.cpp
(+585 files in other folders)
